Bumper til java 16 + Dependabot. (#736)
* Bumper til java 16.

* Bumper graphql-codegen-maven-plugin